change results section 2 to 3 and reduce number of variables considered

--- a/scripts/results_sections/results_section_3_prolonged_colonization_data.Rmd
+++ b/scripts/results_sections/results_section_3_prolonged_colonization_data.Rmd
@@ -44,12 +44,11 @@ paste0("Proportion of subjects with index specimens positive: ", length(ESCrE_in
 ```
 
 ```{r}
-prolonged_melt <- reshape2::melt(prolonged_colonization_df %>% select(household,index_at_1_and_or_2_WGS_escre,index_at_1_and_or_2_Species,index_at_1_and_or_2_Species_ST,index_at_1_and_or_2_Species_ST_cluster,index_at_1_and_or_2_ESCrE_genes,index_at_1_and_or_2_ESCrE_plasmidic_genes,index_at_1_and_or_2_ESCrE_plasmids,index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes,index_at_1_and_or_2_Species_ST_cluster_ESCrE_plasmidic_genes,index_at_1_and_or_2_Species_ST_cluster_ESCrE_plasmids),id.vars="household")
+prolonged_melt <- reshape2::melt(prolonged_colonization_df %>% select(household,index_at_1_and_or_2_WGS_escre,index_at_1_and_or_2_Species,index_at_1_and_or_2_Species_ST,index_at_1_and_or_2_Species_ST_cluster,index_at_1_and_or_2_ESCrE_genes,index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes,index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes_plasmid_aware),id.vars="household")
 prolonged_melt$value <- factor(prolonged_melt$value,levels = c(0,1))
-prolonged_melt$variable <- recode(prolonged_melt$variable,'index_at_1_and_or_2_WGS_escre'='Any ESCrE','index_at_1_and_or_2_Species'='Species','index_at_1_and_or_2_Species_ST'='Species + ST','index_at_1_and_or_2_Species_ST_cluster'='Species + ST + Cluster (Strain)','index_at_1_and_or_2_ESCrE_genes'='ESCrE gene','index_at_1_and_or_2_ESCrE_plasmidic_genes'= 'Plasmidic ESCrE','index_at_1_and_or_2_ESCrE_plasmids'= 'ESCrE plasmid',
-  'index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes'='Strain +/- ESCrE',
-  'index_at_1_and_or_2_Species_ST_cluster_ESCrE_plasmidic_genes'='Strain +/- plasmidic ESCrE',
-  'index_at_1_and_or_2_Species_ST_cluster_ESCrE_plasmids'='Strain +/- ESCrE plasmid')
+prolonged_melt$variable <- recode(prolonged_melt$variable,'index_at_1_and_or_2_WGS_escre'='Any ESCrE','index_at_1_and_or_2_Species'='Species','index_at_1_and_or_2_Species_ST'='Sequence type','index_at_1_and_or_2_Species_ST_cluster'='Strain','index_at_1_and_or_2_ESCrE_genes'='ESCrE gene','index_at_1_and_or_2_ESCrE_plasmidic_genes'= 'Plasmidic ESCrE gene','index_at_1_and_or_2_ESCrE_plasmids'= 'ESCrE plasmid',
+  'index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes'='Strain + ESCrE gene',
+  'index_at_1_and_or_2_Species_ST_cluster_ESCrE_genes_plasmid_aware'='Strain + plasmid-linked ESCrE gene')
 
 prolonged_melt %>% mutate(value = (value ==1)) %>% group_by(variable) %>% summarise(n=sum(value),prop=n/length(value)) %>% favorite_kable()
 ```
