--- a/scripts/results_sections/results_section_5_diagnostic_stats_of_species_level_prolonged_colonization.Rmd
+++ b/scripts/results_sections/results_section_5_diagnostic_stats_of_species_level_prolonged_colonization.Rmd
@@ -1,6 +1,5 @@
 ---
-title: "Results Section 4: Agreement between species-level and higher-resolution molecular
-  evaluations of prolonged colonization"
+title: "Results Section 5: Agreement between species-level and higher-resolution molecular evaluations of prolonged colonization"
 author: "Kyle Gontjes"
 date: "`r Sys.Date()`"
 output: html_document
