--- a/scripts/tables/s_table_1_ESBL_plasmidic_location.Rmd
+++ b/scripts/tables/s_table_1_ESBL_plasmidic_location.Rmd
@@ -37,10 +37,10 @@ ESCRE_genotype_info <- readRDS("./data/amrfinder/beta_lactamase_summary_index_co
 ```
 
 ```{r}
-ESCrE_genotype_data <- left_join(ESCrE_genotype_data %>% mutate(element_symbol = ESCrE),ESCRE_genotype_info %>% select(element_symbol,blactam_class,ESBL,carbapenemase,ampC_like))
+ESCrE_genotype_data <- left_join(ESCrE_genotype_data %>% mutate(element_symbol_renamed = ESCrE),ESCRE_genotype_info %>% select(element_symbol_renamed,blactam_class,ESBL,carbapenemase,ampC_like))
 ESCrE_genotype_data$category <- ifelse(ESCrE_genotype_data$ESBL == T,"ESBL",ifelse(ESCrE_genotype_data$carbapenemase == T,"Carbapenemase",ifelse(ESCrE_genotype_data$ampC_like ==T, "ampC-like","Other")))
 
-ESBL_prop_data <- ESCrE_genotype_data %>% select(element_symbol,category,n_chromosome,n_plasmid,prop_plasmid) %>% arrange(-prop_plasmid,-n_plasmid)
+ESBL_prop_data <- ESCrE_genotype_data %>% select(element_symbol_renamed,category,n_chromosome,n_plasmid,prop_plasmid) %>% arrange(-prop_plasmid,-n_plasmid)
 
 
 colnames(ESBL_prop_data) <- c("ESCrE","Category","No. chromosomal","No. plasmidic","Proportion plasmidic")
