update naming in fig 3

--- a/scripts/figures/figure_3_diagnostic_statistics.Rmd
+++ b/scripts/figures/figure_3_diagnostic_statistics.Rmd
@@ -92,7 +92,7 @@ comparison_of_any_ESCRE_to_WGS_outcomes %>% favorite_kable()
   
 A <- ggplot(data=comparison_of_any_ESCRE_to_WGS_outcomes,aes(x=outcome_rename,y=spec)) + geom_bar(stat='identity',fill="black") + ylab("Specificity (%)") + xlab(NULL)+ theme_bw_me+ ylim(NA,102.5)  + figure_3_format  +   geom_text(aes(label=paste0(format(spec, nsmall = 1), "%")), vjust=0,nudge_y=1) 
 B <- ggplot(data=comparison_of_any_ESCRE_to_WGS_outcomes,aes(x=outcome_rename,y=precision)) + geom_bar(stat='identity',fill="black") + ylab("Precision (%)") + xlab(NULL) + theme_bw_me+ ylim(NA,102.5)  + figure_3_format  +  geom_text(aes(label=paste0(format(precision, nsmall = 1), "%")), vjust=0,nudge_y=1) 
-C <- ggplot(data=comparison_of_any_ESCRE_to_WGS_outcomes,aes(x=outcome_rename,y=f1)) + geom_bar(stat='identity',fill="black") + ylab("F1 Statistic (%)") + xlab(NULL) + theme_bw_me+ ylim(NA,102.5) + figure_3_format + geom_text(aes(label=paste0(format(f1, nsmall = 1), "%")), vjust=0,nudge_y=1) 
+C <- ggplot(data=comparison_of_any_ESCRE_to_WGS_outcomes,aes(x=outcome_rename,y=f1)) + geom_bar(stat='identity',fill="black") + ylab("F1 score (%)") + xlab(NULL) + theme_bw_me+ ylim(NA,102.5) + figure_3_format + geom_text(aes(label=paste0(format(f1, nsmall = 1), "%")), vjust=0,nudge_y=1) 
 D<- ggplot(data=comparison_of_any_ESCRE_to_WGS_outcomes,aes(x=outcome_rename,y=accuracy)) + geom_bar(stat='identity',fill="black") + ylab("Accuracy (%)") + xlab(NULL) + theme_bw_me+ ylim(NA,102.5) + figure_3_format + geom_text(aes(label=paste0(format(accuracy, nsmall = 1), "%")), vjust=0,nudge_y=1) 
 E<- ggplot(data=comparison_of_any_ESCRE_to_WGS_outcomes,aes(x=outcome_rename,y=lr_pos)) + geom_bar(stat='identity',fill="black") + ylab("Positive likelihood ratio") + xlab(NULL) + theme_bw_me+ ylim(NA,max(comparison_of_any_ESCRE_to_WGS_outcomes$lr_pos)+0.5) + figure_3_format + geom_text(aes(label=paste0(format(lr_pos, nsmall = 2))),vjust=0,nudge_y=0.15) 
 
